fix: prevent dropdowns from being cut off CLMS-1542

--- a/theme/clms/css/styles.less
+++ b/theme/clms/css/styles.less
@@ -1279,5 +1279,5 @@ div#page-document h1.documentFirstHeading {
 
 // CLMS-1542
 main {
-  overflow: visible;
+  overflow: visible !important;
 }
